tests/cases/compiler-development/artifact/errors/diagnostic-trait-qualified-associated-missing-impl.diagnostic
diagnostic error code=T0001 family=type message="type Box does not implement trait 'Build' for trait-qualified associated function call" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-qualified-associated-missing-impl.ari" display="tests/cases/traits/errors/trait-qualified-associated-missing-impl.ari" bytes=145
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-qualified-associated-missing-impl.ari" line=10 column=26 end_line=10 end_column=29 byte_start=122 byte_end=125 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-qualified-associated-missing-impl.ari:10:26\n    |\n 10 |   let box = Build::build<Box>(1);\n    |                          ^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-qualified-associated-missing-impl.ari" line=2 column=6 end_line=2 end_column=11 byte_start=19 byte_end=24 message="associated function 'Build::build' requires an impl of trait 'Build'"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-qualified-associated-missing-impl.ari:2:6\n   |\n 2 |   fn build(value: i64) -> Self\n   |      ^^^^^"
  Note index=0 location=none message="trait-qualified associated calls are resolved through an impl for the selected Self type"
  Help index=0 location=none message="implement trait 'Build' for Box or choose a type that already implements it"
